--- a/gradle/deps.gradle
+++ b/gradle/deps.gradle
@@ -21,7 +21,7 @@ ext {
     def retrofitVersion = "2.3.0"
     def espressoVersion = "3.0.0"
     def butterKnifeVersion = "8.8.1"
-    def kotlinVersion = '1.1.61'
+    def kotlinVersion = '1.2.30'
     def archComponentVersion = '1.0.0'
 
     //Exclude group for the test dependency
@@ -80,7 +80,7 @@ ext {
             auth    : 'com.google.firebase:firebase-auth:' + playServiceVersion,
             database: 'com.google.firebase:firebase-database:' + playServiceVersion,
             ads     : 'com.google.firebase:firebase-ads:' + playServiceVersion,
-            config  :'com.google.firebase:firebase-config:' + playServiceVersion
+            config  : 'com.google.firebase:firebase-config:' + playServiceVersion
     ]
 
     //Play services dependency
@@ -108,6 +108,12 @@ ext {
             rxJava   : 'io.reactivex.rxjava2:rxjava:2.1.3',
             rxAndroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
             rxBus    : 'com.hwangjr.rxbus:rxbus:2.0.0'
+    ]
+
+    //dagger
+    daggerLib = [
+            dagger         : 'com.google.dagger:dagger:2.12',
+            daggerProcessor: 'com.google.dagger:dagger-compiler:2.12'
     ]
 
     //Other libs
