--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 dependencies {
     // adding base project
     api project(':base')
+    api project(':utils')
 
     api ide.kotlin
 
@@ -44,6 +45,7 @@ dependencies {
     api supportLib.appCompat
     api supportLib.supportv4
     api supportLib.recyclerView
+    api supportLib.design
     api ide.constrainlayout
 
     // testing libraries
